ex4/testdata/typechecker/error/UnknownSupertype.java
class A {
	public static void main(String[] args) {

	}
}

// Error: Spice is an unknown supertype.
class Pepper extends Spice {
}
